# terra-invicta-tech-optimizer

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: local_storage.md  performance.md  user_stories.md
inputs/: TIProjectTemplate.json  TITechTemplate.json
openspec/: project.md
openspec/changes/add-backlog-localstorage-and-research-simulation/: implementation.md  proposal.md  tasks.md
openspec/changes/add-backlog-localstorage-and-research-simulation/specs/planner-backlog-persistence/: spec.md
openspec/changes/add-results-backlog-dataframes/: proposal.md  tasks.md
openspec/changes/archive/2025-12-23-add-start-here-page/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-23-refactor-immutable-graph-data/: design.md  proposal.md  tasks.md
openspec/changes/update-start-here-dataframe/: proposal.md  tasks.md
openspec/specs/planner-performance/: spec.md
openspec/specs/planner-start-here/: spec.md
pages/: Graph.py  Results.py  Start_here.py
scripts/: coverage_gate.py
terra_invicta_tech_optimizer/: __init__.py  backlog_storage.py  graph.py  input_loader.py  planner_data.py  simulation.py  validation.py
terra_invicta_tech_optimizer/streamlit_app/: __init__.py  config.py  data.py  graphviz.py  state.py  storage.py
terra_invicta_tech_optimizer/streamlit_app/ui/: __init__.py  graph_page.py  layout.py  results_page.py  shared.py  start_page.py
tests/: test_backlog_storage.py  test_graph_explorer.py  test_input_loading.py  test_planner_data.py  test_simulation.py
(+5 files in other folders)
