[project]
name = "terra-invicta-tech-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.1",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "streamlit-local-storage>=0.0.25",
    "streamlit-keyup>=0.3.0",
    "streamlit>=1.37.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
]
